trunk/Archive2/9f/87774e7136060d/output
main.cpp:72:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
main.cpp:152:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
main.cpp:181:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
 char *week[]={"Sunday","Monday","Tuesday"," Wednesday","Thursday","Friday","Saturday"};
                                                                                      ^
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp:10:86: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp: In function 'void fn2()':
main.cpp:132:15: warning: suggest parentheses around '&&' within '||' [-Wparentheses]
 if((year%4==0)&&(year%100!=0)||(year%400==0))
               ^
main.cpp: At global scope:
main.cpp:186:11: error: '::main' must return 'int'
 void main()
           ^
